# knowledge-hub

./: .gitignore  README.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: qa_graph.py
backend/app/api/routes/: chat.py  documents.py  health.py  workspace.py
backend/app/core/: auth.py  config.py  logging.py  request_context.py  runtime.py
backend/app/db/: migration_bootstrap.py  session.py
backend/app/ingestion/: __init__.py
backend/app/llm/: __init__.py
backend/app/models/: __init__.py  entities.py
backend/app/observability/: __init__.py
backend/app/retrieval/: __init__.py
backend/app/schemas/: chat.py  common.py  documents.py  errors.py  health.py  workspace.py
backend/app/services/: embeddings.py  generation.py  ingestion.py  retrieval.py
backend/app/services/observability/: tracer.py
backend/app/services/parsers/: document_parser.py
backend/app/utils/: text.py
backend/scripts/: bulk_upload.py  eval.py  get_test_token.py  local_auth_doctor.py  run_evals.py  seed_demo.py  start_backend.sh  test_harness.py  verify_groq_provider.py  verify_langsmith_tracing.py  verify_openai_provider.py
backend/tests/: test_auth.py  test_benchmark_dataset.py  test_chat_route.py  test_documents_route.py  test_generation_service.py  test_groq_provider_integration.py  test_health.py  test_migrations.py  test_openai_provider_integration.py  test_qa_graph.py  test_runtime_config.py  test_tracer.py
docs/: architecture.md  deployment.md  eval-plan.md  load-testing.md  (+2 more)
(+53 files in other folders)
