[project]
name = "knowledge-hub-backend"
version = "0.1.0"
description = "FastAPI backend for Knowledge Hub."
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008", "E501"]
